feat: update learner